# pdf_rotation

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pdf_rotation/: __init__.py  pdf_rotation.py
tests/: __init__.py  test_pdf_rotation.py
